adding dataset submission from https://github.com/mitll/PACT/issues/5 by @mkrangle

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "datasets/MIT-Matrix-Data"]
 	path = datasets/MIT-Matrix-Data
 	url = https://github.com/mitll/MIT-Matrix-Data.git
+[submodule "datasets/MITRE-Range-Angle-Unstructured"]
+	path = datasets/MITRE-Range-Angle-Unstructured
+	url = https://github.com/mkrangle/MITRE-Range-Angle-Unstructured.git
